--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -11,7 +11,7 @@
         android:textColor="@color/teal_200"
         android:textSize="32sp"
         android:textAlignment="center"
-        android:text="history"
+        android:background="@drawable/ic_history"
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
