--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -5,6 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".fragments.ResultFragment">
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <TextView
         android:id="@+id/tv_counter"
         android:layout_width="match_parent"
@@ -13,5 +16,6 @@
         android:textAlignment="center"
         android:textColor="@color/purple_700"
         android:textSize="32sp" />
+    </androidx.core.widget.NestedScrollView>
 
 </RelativeLayout>
